objects/SO_SAP_Account__c.object
<CustomObject>
    <label>SAP Account</label>
    <nameField>
        <displayFormat>FIN-{00000000}</displayFormat>
        <label>SAP ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>SO_SAP_ID__c</fullName>
        <externalId>true</externalId>
        <label>SAP ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SO_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Set-up</fullName>
                </value>
                <value>
                    <fullName>Not Set-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SAP Accounts</relationshipLabel>
        <relationshipName>SAP_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JLR_Markets</valueSetName>
        </valueSet>
    </fields>
</CustomObject>